fixed overflowing footer

--- a/src/app/po_dash/po_active_detail.scss
+++ b/src/app/po_dash/po_active_detail.scss
@@ -3,4 +3,5 @@
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
+  overflow: hidden;
 }
